styles/styles.css
/*

filename: styles.css

author: 

created: 27/03/2026

Last modified: 17/04/2026

description: Co.Org.E Global stylesheet

*/
/* GFonts import for that awesome branding 
   I could have also done this in the HTML header but that's much less portable */
@import url('https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,400;0,700;1,300;1,400;1,700&family=Zen+Dots&display=swap');

/*changes the color variables based on the users browser appearance settings*/
:root {
  --text: #15001a;
  --secondary: #3d3d3d;
  --background: #fbfbf4;
  --accent: #a5cbd9;
  --header: var(--accent);
}
/* Dark mode specific selectors to fix colors and the logo */
@media (prefers-color-scheme: dark) {
  :root {
    --text: #fbfbf4;
    --secondary: #9d9d9d;
    --background: #15001a;
    --accent: #4e84b3;
    --header: #3f6281;
  }
  .logo {
    filter: invert() brightness(0.99);
  }
}

/* remove body padding */
body {
  margin: 0;
}

/* make the header and nav cluster all pretty */
header {
  min-width: 100%;
  margin: 0;
  background-color: var(--header);
}
.heading {
  display: inline-flex;
  
  margin-left: 1%;
  margin-top: 1%;
}
.heading div * {
  margin: 0 0 0 3%;
}


/* unfortunately the second media selector does have to be here or the gradient invert doesn't work */
body {
  color: var(--text);
  background: linear-gradient(var(--background), var(--accent));
} 
@media (prefers-color-scheme: dark) {
  body {
    background: linear-gradient(var(--accent), var(--background));
  }
}

/* Changing text color and font */
h1, h2, h3, h4, h5, h6 {
  color: var(--text);
}
h1 {
  font-family: "Zen Dots", sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 300%;
}
h2 {
  font-family: "Zen Dots", sans-serif;
  font-weight: 300;
  font-style: normal;
  font-size: 100%;
}
th, strong, h3 {
  font-family: "Sansation", sans-serif;
  font-weight: 700;
  font-style: normal;
}
h4 {
  font-family: "Sansation", sans-serif;
  font-weight: 400;
  font-style: normal;
}
* {
  font-family: "Sansation", sans-serif;
  font-weight: 400;
}

main {
  padding-bottom: 2em;
}


/* Nav cluster styling using flex */
nav {
  background-color: var(--header);
  color: var(--background);
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-start;
  padding: .5%;
}
nav .nav_left a { /* remove the visual underline from the links in the navbar, and set the spacing */
  margin: 0.5em;
  color: var(--text);
  text-decoration: none;
}
nav form { /* move the search bar to the right */
  margin-left: auto;
  justify-content: flex-end;
}
nav form input[type=url] { /* make the url box not huge */
  min-width: 40em;
}
nav #current_page_nav { /* underline the current page */
  color: var(--text);
  text-decoration: underline;
}

/* footer styling */
footer {
  background-color: var(--header);
}
footer a {
  color: var(--text);
  margin: 0.5em;
}

/* aside for the jobs page */
aside {
  border: 4px inset #a5cbd9;
  border-radius: 14px;
  margin: 1em;
  padding: 1em;
  width: 25%;
  float: right;
  box-shadow: 10px 10px 5px #fbfbf4;
}

/* jobs is the only page to use section */
.jobs-page section {
  width: 30%;
  float: left;
  padding-left: 2em;
}

.Offers {
  padding-left: 1.3em;
  font-size: 150%;
}

/* Fix the way that firefox renders all the input boxes about 50% larger than chrome. */
/* the other way of selecting only firefox ( @-moz-document url-prefix() ) threw validation errors */
@supports (-moz-appearance:none) {
  input {
    /* Don't ask me where i got that number from, it looks about right to me */
    max-width: 38.5%;
  }
} 

